# EVEIndy

./: .env.example  .gitignore  README.md  alembic.ini  celery_app.py  docker-compose.yml  plan.md  pyproject.toml  requirements.txt  specify.md  tasks.md  tasks.py
.github/workflows/: ci.yml
app/: __init__.py  cache.py  config.py  db.py  dependencies.py  main.py  rate_limit.py  schedules.py  sde_autoload.py
app/api/: __init__.py
app/math/: __init__.py
app/providers/: __init__.py  adam4eve.py  base.py  esi.py  factory.py  fuzzwork.py
app/repos/: __init__.py
app/services/: analytics.py  bom.py  costing_service.py  inventory.py  market.py  plan.py  prices.py  systems.py
app/workers/: __init__.py  esi_sync.py
core/: ratelimiter.py
docs/: ATTRIBUTION.md  providers.md  rate_limits.md  schema.md  sde.md  sde_auto.md  setup.md
docs/workflows/: esi_sync.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
indy_math/: __init__.py  costing.py  indicators.py  planner.py  spp.py
memory/: constitution.md
migrations/: __init__.py  env.py
migrations/versions/: 20240416_01_initial_schema.py  20240416_02_sde_schema.py  20240416_03_subset_schema.py  20240416_04_ui_state.py  20240416_05_industry_materials.py  20240416_06_blueprints_output_qty.py
redis/: keys.md
scripts/: lint.sh  run_tests.sh
tests/: conftest.py  test_db.py
tests/api/: test_analytics.py  test_bom.py  test_health.py  (+5 more)
utils/: __init__.py  backfill_prices.py  fetch_and_load_sde.py  load_sde_dir.py  manage_sde.py  seed_db.py
(+54 files in other folders)
